--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -40,7 +40,7 @@ regex = "1"
 bitflags.workspace = true
 foldhash.workspace = true
 url = "2.5.4"
-
+blake3 = "1.5"
 log = "0.4"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -63,3 +63,5 @@ regex-cursor = "0.1.5"
 [dev-dependencies]
 quickcheck = { version = "1", default-features = false }
 indoc = "2.0.6"
+tempfile = "3.9"
+rand = { version = "0.8", default-features = false, features = ["getrandom", "small_rng"] }
